advertising with AdMod

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="app_name">Taller 3 Android</string>
     <string name="btnClick">En línea</string>
     <string name="btnInterface">Interfaz</string>
